<resources>
    <string name="app_name">SpotifyPorject</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="Hello">
Hello
</string>
    <string name="example_user_name">Serena vanderwoodsen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="log_out">Log Out</string>
    <string name="msg_token_fmt">msg_token_fmt</string>
    <string name="sample_artist_name">Imagine Dragons</string>
    <string name="sample_artist_genre">Pop</string>
    <string name="sample_song_name">Demons</string>
    <string name="sample_song_album">Album</string>
    <string name="favorites">Favorites</string>
    <string name="google">Google</string>
</resources>